# fast_gpu_voronoi

./: .gitignore  30.933825480653503.cl  LICENSE  README.md  algo_bruteforce.cl  algo_local_noise.cl  algo_noise.cl  algo_template.cl  debug.py  gpu.py  jfa.py  main.py  plot.py  plot.save.py  pyproject.toml  requirements.txt  setup.py  test.py  test_0.015.cl  test_0.19.cl  test_debug.py  utils.py
docs/: slides.tex
docs/usyd-beamer-theme/: beamercolorthemeusyd.sty  beamerinnerthemeusyd.sty  beamerouterthemeusyd-logobar.sty
fast_gpu_voronoi/: __init__.py  bench.py  debug.py  develop.py  gen.py  instance.py  ref.py
fast_gpu_voronoi/kernels/: jfa.cl  jfa_fusion.cl
figures/: table.tex
figures/results-small-high/: table.tex
figures/results-small-low/: table.tex
paper/: acmart-preload-hook.tex  build.py  main.bib  main.tex  references.bib
results_small_high/: domain.json  jfa.cl  jfa.json
results_small_high/code/: -0.20347418355059213.cl  -0.837838189748072.cl  -0.8863618743316503.cl  -101.63686148211723.cl  -1012.5477377343482.cl  -1015.0874389837837.cl  -102.46645705316071.cl  -103.90169379451356.cl  -104.46646125661228.cl  -105.57884251430619.cl  -10502.276573860183.cl  -1060.8483749703134.cl  -107.02546822262782.cl  -108.01882722468524.cl  -110.31150619579648.cl  -110.58714000266484.cl  -1109.4538000381488.cl  (+304 more)
results_small_low/: domain.json  jfa.cl  jfa.json
sandbox/: jfa_template.cl  search_space.py
src/: __init__.py  __research.py  debug.py  gpu.py  jfa.py  utils.py
test/: benchmarks.py  test_api.py
tests/: test_fast_gpu_voronoi.py
(+899 files in other folders)
